now really solved section

--- a/General/Mathemathics.ipynb
+++ b/General/Mathemathics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "source": [
     "import numpy as np"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "source": [
     "def extended_gcd(a, b):\n",
     "    r = [a, b]\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "source": [
     "#Greatest Common Divisor\n",
     "a = 66528\n",
@@ -45,8 +45,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1512\n",
-      "1512\n",
       "1512\n"
      ]
     }
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "source": [
     "#Extended GCD\n",
     "a = 26513\n",
@@ -80,7 +78,69 @@
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 64
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "source": [
+    "#Modular Arithmetic 1\n",
+    "a = 11 % 6\n",
+    "b = 8146798528947 % 17\n",
+    "print(a, b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5 4\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "source": [
+    "#Modular Arithmetic 2\n",
+    "print(3**17 % 17, 5**17 % 17)\n",
+    "print(7**16 % 17)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3 5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "source": [
+    "#Modular Inverting\n",
+    "x = 3**11\n",
+    "print((3*x) % 13)\n",
+    "\n",
+    "print(x % 13)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n",
+      "9\n"
+     ]
     }
    ],
    "metadata": {}
