--- a/General/Encoding.ipynb
+++ b/General/Encoding.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "import base64\n",
+    "from Crypto.Util.number import long_to_bytes\n",
+    "from pwn import * # pip install pwntools\n",
+    "import json\n",
+    "import codecs"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "#ASCII\n",
     "L = [99, 114, 121, 112, 116, 111, 123, 65, 83, 67, 73, 73, 95, 112, 114, 49, 110, 116, 52, 98, 108, 51, 125]\n",
     "print(\"\".join([chr(x) for x in L]))"
@@ -13,10 +26,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "#Hex\n",
+    "s = '63727970746f7b596f755f77696c6c5f62655f776f726b696e675f776974685f6865785f737472696e67735f615f6c6f747d'\n",
+    "bytes.fromhex(s).decode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'crypto{You_will_be_working_with_hex_strings_a_lot}'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "source": [
     "#Base64\n",
-    "import base64\n",
     "x = bytes.fromhex(\"72bca9b68fc16ac7beeb8f849dca1d8a783e8acf9679bf9269f7bf\")\n",
     "print(base64.b64encode(x))"
    ],
@@ -36,7 +70,6 @@
    "execution_count": 1,
    "source": [
     "#Bytes and Big Integers\n",
-    "from Crypto.Util.number import long_to_bytes\n",
     "long_to_bytes(11515195063862318899931685488813747395775516287289682636499965282714637259206269)"
    ],
    "outputs": [
@@ -57,10 +90,6 @@
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "from pwn import * # pip install pwntools\n",
-    "import json\n",
-    "import codecs\n",
-    "\n",
     "r = remote('socket.cryptohack.org', 13377)\n",
     "\n",
     "def json_recv():\n",
@@ -605,31 +634,6 @@
       "[DEBUG] Received 0x29 bytes:\n",
       "    b'{\"flag\": \"crypto{3nc0d3_d3c0d3_3nc0d3}\"}\\n'\n"
      ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "import codecs\n",
-    "from Crypto.Util.number import bytes_to_long, long_to_bytes\n",
-    "\n",
-    "x = 'abcd'\n",
-    "y = [ord(b) for b in x]\n",
-    "\"\".join([chr(x) for x in y])"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'abcd'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
     }
    ],
    "metadata": {}
