created data directory

--- a/General/DataFormats.ipynb
+++ b/General/DataFormats.ipynb
@@ -17,7 +17,7 @@
    "execution_count": 10,
    "source": [
     "#Privacy-Enhanced Mail?\n",
-    "with open('privacy_enhanced_mail.pem', 'r') as f:\n",
+    "with open('data/privacy_enhanced_mail.pem', 'r') as f:\n",
     "    s = f.read()\n",
     "# s = s[1:-1] #remove first and last line\n",
     "# s = \"\".join(s).replace('\\n', '').encode()\n",
@@ -45,7 +45,7 @@
    "source": [
     "#CERTainly not\n",
     "\n",
-    "with open('2048b-rsa-example-cert.der', 'br') as f:\n",
+    "with open('data/2048b-rsa-example-cert.der', 'br') as f:\n",
     "    der = f.read()\n",
     "# x509 = OpenSSL.crypto.load_certificate(OpenSSL.crypto.FILETYPE_ASN1, der)\n",
     "# pkey = x509.get_pubkey()\n",
@@ -72,7 +72,7 @@
    "execution_count": 11,
    "source": [
     "#SSH Keys\n",
-    "with open('bruce_rsa.pub', 'r') as f:\n",
+    "with open('data/bruce_rsa.pub', 'r') as f:\n",
     "    rsa_pkey = f.read().rstrip()\n",
     "RSA.import_key(rsa_pkey)"
    ],
@@ -95,7 +95,7 @@
    "execution_count": 12,
    "source": [
     "#SSH Keys - another way\n",
-    "with open('bruce_rsa.pub', 'r') as file:\n",
+    "with open('data/bruce_rsa.pub', 'r') as file:\n",
     "    raw = file.read()\n",
     "\n",
     "pkey = base64.b64decode(raw.split()[1])\n",
@@ -128,7 +128,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#Transparency"
+    "#Transparency\n",
+    "#enter https://transparencyreport.google.com/https/certificates and search for cryptobot.org subdomains"
    ],
    "outputs": [],
    "metadata": {}
