--- a/General/XOR.ipynb
+++ b/General/XOR.ipynb
@@ -128,7 +128,7 @@
    "execution_count": 28,
    "source": [
     "# Lemur XOR\n",
-    "with Image.open(\"flag.png\") as flag_im, Image.open(\"lemur.png\") as lemur_im:\n",
+    "with Image.open(\"data/flag.png\") as flag_im, Image.open(\"data/lemur.png\") as lemur_im:\n",
     "    lemur_im_np = np.array(lemur_im)\n",
     "    flag_im_np = np.array(flag_im)\n",
     "    xor_np  = np.bitwise_xor(lemur_im_np, flag_im_np)\n",
